<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:letterSpacing=".15"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:background="@color/blue"
       />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/image_numbers"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_number"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textColor="@color/purple_200"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/id_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_user"

        />

    <EditText
        android:id="@+id/id_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_user"
        android:inputType="number"
        />

    <Button
        android:id="@+id/numberButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_margin="50dp"

        />

</LinearLayout>